GNOME Bugzilla – Bug 652522
Searching for string in logs no longer highlights find
Last modified: 2011-06-21 11:55:55 UTC
If you search for "foo", it'll show you the search results with "foo" in the chats, but won't highlight "foo" at all. Please do!
*** Bug 593733 has been marked as a duplicate of this bug. ***
Review of http://cgit.collabora.com/git/user/pochu/empathy.git/commit/?h=history-ui&id=c8b72e7d79946bc788699f01581f782933829cd7 + gchar *str = g_regex_escape_string (log_window->last_find, -1); + gchar *replacement = g_markup_printf_escaped ( + GRegex *regex = g_regex_new (str, 0, 0, &error); + gchar *new_msg = g_regex_replace_literal (regex, All of those are leaked. I usually prefer if (badger == NULL) rather than if (error != NULL).
commit 5faa536ed6fc6ce21421900d4ddea64c61f5182a Author: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk> Date: Mon Jun 20 17:38:32 2011 +0100 LogWindow: highlight the searched text https://bugzilla.gnome.org/show_bug.cgi?id=652522