LogWindow: highlight the searched text

https://bugzilla.gnome.org/show_bug.cgi?id=652522